--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 4.0.6
  * Fix Settings Virtual Table - index_summary_resize_interval and index_summary_capacity were not updated after startup (CASSANDRA-17735)
  * Clean up ScheduledExecutors, CommitLog, and MessagingService shutdown for in-JVM dtests (CASSANDRA-17731)
+ * Remove extra write to system table for prepared statements (CASSANDRA-17764)
 
 
 4.0.5
