Move deb/rpm repositories from dist/downloads .a.o to apache.jfrog.io
 patch by Mick Semb Wever; reviewed by Brandon Williams for CASSANDRA-17748

--- a/doc/modules/cassandra/pages/getting_started/installing.adoc
+++ b/doc/modules/cassandra/pages/getting_started/installing.adoc
@@ -72,7 +72,7 @@ will install the binaries and configuration files as the `cassandra` OS user.
 include::example$BASH/docker_pull.sh[]
 ----
 
-This `docker pull` command will get the specified version of the official
+This `docker pull` command will get the specified version of the 'Docker Official'
 Apache Cassandra image available from the https://hub.docker.com/_/cassandra[Dockerhub].
 
 [arabic, start=2]
