--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1-alpha2
+ * Remove usages of Path#toFile() in the snapshot apparatus (CASSANDRA-17769)
  * Fix Settings Virtual Table to update paxos_variant after startup and rename enable_uuid_sstable_identifiers to
    uuid_sstable_identifiers_enabled as per our config naming conventions (CASSANDRA-17738)
  * index_summary_resize_interval_in_minutes = -1 is equivalent to index_summary_resize_interval being set to null or
