--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -45,6 +45,7 @@ Merged from 4.0:
  * Clean up ScheduledExecutors, CommitLog, and MessagingService shutdown for in-JVM dtests (CASSANDRA-17731)
  * Remove extra write to system table for prepared statements (CASSANDRA-17764)
 Merged from 3.11:
+ * Document usage of closed token intervals in manual compaction (CASSANDRA-17575)
  * Creating of a keyspace on insufficient number of replicas should filter out gosspping-only members (CASSANDRA-17759)
 Merged from 3.0:
  * Fix restarting of services on gossipping-only member (CASSANDRA-17752)
