--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.2
+ * Cleanup pylint issues with pylexotron.py (CASSANDRA-17779)
  * NPE bug in streaming checking if SSTable is being repaired (CASSANDRA-17801)
  * Users of NativeLibrary should handle lack of JNA appropriately when running in client mode (CASSANDRA-17794)
  * Warn on unknown directories found in system keyspace directory rather than kill node during startup checks (CASSANDRA-17777)
