--- a/NEWS.txt
+++ b/NEWS.txt
@@ -165,7 +165,7 @@ New features
 
 Upgrading
 ---------
-    - `sstable_preemptive_open_interval_in_mb` being negatve for disabled is equivalent to `sstable_preemptive_open_interval`
+    - `sstable_preemptive_open_interval_in_mb` being negative for disabled is equivalent to `sstable_preemptive_open_interval`
       being null again. JMX MBean `StorageService`, `setSSTablePreemptiveOpenIntervalInMB` method still takes `intervalInMB`
       negative numbers for disabled.
     - `enable_uuid_sstable_identifiers` parameter from 4.1 alpha1 was renamed to `uuid_sstable_identifiers_enabled`.
