--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.2
+ * Add support to generate a One-Shot heap dump on unhandled exceptions (CASSANDRA-17795)
  * Users of NativeLibrary should handle lack of JNA appropriately when running in client mode (CASSANDRA-17794)
  * Warn on unknown directories found in system keyspace directory rather than kill node during startup checks (CASSANDRA-17777)
  * Log duplicate rows sharing a partition key found in verify and scrub (CASSANDRA-17789)
