--- a/doc/modules/cassandra/pages/tools/sstable/sstableloader.adoc
+++ b/doc/modules/cassandra/pages/tools/sstable/sstableloader.adoc
@@ -46,21 +46,21 @@ internode communication (default 7001)
 |--no-progress |don't display progress
 
 |-t, --throttle <throttle> |(deprecated) throttle speed in Mbits
-(default 0 for unlimited) Use -tmib / --throttle-mib instead
+(default 0 for unlimited) Use --throttle-mib instead
 
-|-tmib, --throttle-mib <throttle-mib> |throttle speed in MiB/s
+|--throttle-mib <throttle-mib> |throttle speed in MiB/s
 (default 0 for unlimited)
 
 |-idct, --inter-dc-throttle <inter-dc-throttle> |(deprecated) inter-datacenter
-throttle speed in Mbits (default 0 for unlimited) Use -idctmib / --inter-dc-throttle-mib instead
+throttle speed in Mbits (default 0 for unlimited) Use --inter-dc-throttle-mib instead
 
-|-idctmib, --inter-dc-throttle-mib <inter-dc-throttle-mib> |inter-datacenter
+|--inter-dc-throttle-mib <inter-dc-throttle-mib> |inter-datacenter
 throttle speed in MiB/s (default 0 for unlimited)
 
-|-emib, --entire-sstable-throttle-mib <throttle-mib> |entire SSTable throttle
+|--entire-sstable-throttle-mib <throttle-mib> |entire SSTable throttle
 speed in MiB/s (default 0 for unlimited)
 
-|-eidctmib, --entire-sstable-inter-dc-throttle-mib <inter-dc-throttle-mib> |entire
+|--entire-sstable-inter-dc-throttle-mib <inter-dc-throttle-mib> |entire
 SSTable inter-datacenter throttle speed in MiB/s (default 0 for unlimited)
 
 |-cph, --connections-per-host <connectionsPerHost> |number of concurrent
