--- a/NEWS.txt
+++ b/NEWS.txt
@@ -74,10 +74,12 @@ New features
       - Maximum replication factor
       - Whether DROP KEYSPACE commands are allowed.
     - It is possible to list ephemeral snapshots by nodetool listsnaphots command when flag "-e" is specified.
+    - Added a new flag to `nodetool profileload` and JMX endpoint to set up recurring profile load generation on specified
+      intervals (see CASSANDRA-17821)
 
 Upgrading
 ---------
-    - Emphemeral marker files for snapshots done by repairs are not created anymore, 
+    - Ephemeral marker files for snapshots done by repairs are not created anymore,
       there is a dedicated flag in snapshot manifest instead. On upgrade of a node to version 4.2, on node's start, in case there 
       are such ephemeral snapshots on disk, they will be deleted (same behaviour as before) and any new ephemeral snapshots 
       will stop to create ephemeral marker files as flag in a snapshot manifest was introduced instead.
